# Yuxi

./: .env.template  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.en.md  README.md  REFACTOR.md  decisions.md  docker-compose.prod.yml  docker-compose.yml  test_knowledge.txt  test_router.py  translation_cache.json  translations_en.json  translations_vi.json
backend/: pyproject.toml  test_pdf_rag.py  translation_cache.json
backend/alembic/: env.py
backend/alembic/versions/: 39fc6f7b8af0_add_version_status_and_entity_.py  83abeafb8378_add_memory_tables.py  8566e8eb7133_baseline.py  96d0b2c39695_add_auditlog_with_hash_chain.py
backend/package/: README.md  pyproject.toml
backend/package/yuxi/: __init__.py
backend/package/yuxi/agents/: __init__.py  (+3 more)
backend/scripts/: backfill_bm25_vietnamese.py  reset_admin.py  seed_initial_users.py  test_query.py  tune_consensus_weights.py
backend/server/: main.py  worker_main.py
backend/server/routers/: __init__.py  agent_router.py  audit_router.py  auth_dept_router.py  auth_router.py  chat_router.py  dashboard_router.py  filesystem_router.py  graph_router.py  knowledge_eval_router.py  knowledge_router.py  mcp_router.py  mention_router.py  model_provider_router.py  skill_router.py  system_router.py  system_task_router.py  tool_router.py  user_router.py  workspace_router.py
backend/server/utils/: access_log_middleware.py  auth_middleware.py  lifespan.py
backend/test/: .env.test.example
backend/test/api/: __init__.py
backend/test/data/: test_rag_document.txt
backend/test/e2e/: test_agent_bubble_sort_e2e.py  test_attachment_and_agent_state.py  test_rag_pipeline_e2e.py  test_subagent_stream_e2e.py
backend/test/integration/: conftest.py  retrieval_stages_snapshot.json  test_retrieval_stages.py
backend/test/unit/: test_auth_utils.py  test_chunking_token_limit.py  test_tmp_attachment_service.py
(+497 files in other folders)
